--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,73 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/light_grey">
 
     <ScrollView
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="409dp"
-        android:layout_height="729dp">
+        android:layout_height="729dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/container1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <ListView
-            android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="-38dp"
-            tools:ignore="MissingConstraints,NestedScrolling" />
+            <ListView
+                android:id="@+id/listview"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                tools:ignore="MissingConstraints,NestedScrolling"
+                tools:layout_editor_absoluteX="0dp"
+                tools:layout_editor_absoluteY="-38dp" />
 
-        <ListView
-            android:id="@+id/action_search"
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints,NestedScrolling" />
+            <ListView
+                android:id="@+id/action_search"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                app:layout_constraintStart_toStartOf="parent"
+                tools:ignore="MissingConstraints,NestedScrolling" />
 
-        <ImageView
-            android:id="@+id/ImageLogo"
-            android:layout_width="73dp"
-            android:layout_height="83dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:contentDescription="@string/app_logo"
-            android:src="@drawable/logo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/ImageLogo"
+                android:layout_width="73dp"
+                android:layout_height="83dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:contentDescription="@string/app_logo"
+                android:src="@drawable/logo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/search"
-            android:layout_width="256dp"
-            android:layout_height="57dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintStart_toEndOf="@id/ImageLogo"
-            app:layout_constraintTop_toTopOf="parent"
-            app:menu="@menu/menu" />
+            <androidx.appcompat.widget.SearchView
+                android:id="@+id/search"
+                android:layout_width="256dp"
+                android:layout_height="57dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="32dp"
+                app:layout_constraintStart_toEndOf="@id/ImageLogo"
+                app:layout_constraintTop_toTopOf="parent"
+                app:menu="@menu/menu" />
 
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/accomodation"
-            android:layout_width="180dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/button_bg"
-            android:text="@string/accommodation"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/accomodation"
+                android:layout_width="180dp"
+                android:layout_height="61dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/button_bg"
+                android:text="@string/accommodation"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/buy_and_sale"
@@ -84,19 +84,19 @@
                 app:layout_constraintStart_toEndOf="@id/accomodation"
                 app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/lost_and_found"
-            android:layout_width="180dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/button_bg"
-            android:text="@string/lost_and_found"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/accomodation" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/lost_and_found"
+                android:layout_width="180dp"
+                android:layout_height="61dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/button_bg"
+                android:text="@string/lost_and_found"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/accomodation" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/project"
@@ -128,27 +128,27 @@
                 app:layout_constraintStart_toEndOf="@id/services"
                 app:layout_constraintTop_toBottomOf="@id/project" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/services"
-            android:layout_width="180dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/button_bg"
-            android:text="@string/services"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/lost_and_found" />
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/services"
+                android:layout_width="180dp"
+                android:layout_height="61dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/button_bg"
+                android:text="@string/services"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/lost_and_found" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/services"
                 android:layout_marginTop="24dp"
-                android:elevation="1dp">
+                android:elevation="1dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/services">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
@@ -165,18 +165,17 @@
     </ScrollView>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/container"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:menu="@menu/bottom_nav_menu"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
