--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -25,25 +25,22 @@
 
         <TextView
             android:id="@+id/item_name"
-            android:layout_height="wrap_content"
             android:layout_width="0dp"
-            android:layout_marginStart="8dp"
-            android:elevation="5dp"
+            android:layout_height="wrap_content"
             android:onClick="More_details"
             android:text="@string/_3"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@id/item_photo"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/item_photo"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/date"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
             android:text="@string/today_11_23"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,15 +51,15 @@
             android:id="@+id/price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:elevation="5dp"
             android:text="@string/_19_500_000"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/item_photo"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/date" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
