--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -25,18 +25,18 @@
         app:srcCompat="@drawable/img" />
 
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text=" Опубликовано 27 April 2022"
         android:textSize="14dp"
-        app:layout_constraintStart_toStartOf="@id/item_name"
+        app:layout_constraintStart_toStartOf="@id/item_title"
         app:layout_constraintTop_toBottomOf="@id/item_photo" />
 
 
     <TextView
-        android:id="@+id/item_name"
+        android:id="@+id/item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -45,7 +45,7 @@
         android:textSize="22dp"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/date" />
+        app:layout_constraintTop_toBottomOf="@id/item_date" />
 
     <TextView
         android:id="@+id/price"
@@ -58,7 +58,7 @@
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_name" />
+        app:layout_constraintTop_toBottomOf="@id/item_title" />
 
     <TextView
         android:id="@+id/description"
@@ -73,7 +73,7 @@
         app:layout_constraintTop_toBottomOf="@id/price" />
 
     <TextView
-        android:id="@+id/description_text"
+        android:id="@+id/item_description"
         android:layout_width="361dp"
         android:layout_height="53dp"
         android:layout_marginTop="8dp"
@@ -90,7 +90,7 @@
         android:src="@drawable/profile_modified"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/description_text" />
+        app:layout_constraintTop_toBottomOf="@id/item_description" />
 
     <TextView
         android:id="@+id/author_name"
@@ -103,7 +103,7 @@
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/profile_photo"
-        app:layout_constraintTop_toBottomOf="@id/description_text" />
+        app:layout_constraintTop_toBottomOf="@id/item_description" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
