--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -94,11 +94,12 @@
                 app:layout_constraintTop_toBottomOf="@id/title"/>
 
             <Spinner
-                android:id="@+id/et_category"
+                android:id="@+id/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
                 android:hint="@string/example_lost_and_found"
+                android:entries="@array/categories"
                 android:inputType="text"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@id/product_name"
@@ -113,7 +114,7 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@id/et_category"
+                app:layout_constraintTop_toBottomOf="@id/spinner"
                 app:layout_constraintStart_toStartOf="@id/product_name"
                 android:layout_marginTop="24dp"/>
 
