--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,93 +54,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:menu="@menu/menu" />
 
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/accomodation"
-                android:layout_width="180dp"
-                android:layout_height="61dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:background="@drawable/button_bg"
-                android:text="@string/accommodation"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/buy_and_sale"
-                android:layout_width="180dp"
-                android:layout_height="61dp"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="32dp"
-                android:background="@drawable/button_bg"
-                android:text="@string/buy_sale"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/accomodation"
-                app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/lost_and_found"
-                android:layout_width="180dp"
-                android:layout_height="61dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/button_bg"
-                android:text="@string/lost_and_found"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/accomodation" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/project"
-                android:layout_width="180dp"
-                android:layout_height="61dp"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/button_bg"
-                android:text="@string/project"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/lost_and_found"
-                app:layout_constraintTop_toBottomOf="@id/buy_and_sale" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/other"
-                android:layout_width="180dp"
-                android:layout_height="61dp"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/button_bg"
-                android:text="@string/other"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/services"
-                app:layout_constraintTop_toBottomOf="@id/project" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/services"
-                android:layout_width="180dp"
-                android:layout_height="61dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/button_bg"
-                android:text="@string/services"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/lost_and_found" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Categories"
+                android:textSize="20dp"
+                android:textStyle="bold"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/recycler_view"
+                android:layout_marginTop="10dp"/>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -148,7 +72,7 @@
                 android:layout_marginTop="24dp"
                 android:elevation="1dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/services">
+                app:layout_constraintTop_toBottomOf="@id/ImageLogo">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerView"
