--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
 
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/accomodation"
+                android:id="@+id/accommodation"
                 android:layout_width="180dp"
                 android:layout_height="61dp"
                 android:layout_marginStart="16dp"
@@ -66,6 +66,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="20sp"
+                android:onClick="accommodations"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
 
@@ -80,8 +81,9 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="20sp"
+                android:onClick="buy_sale"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/accomodation"
+                app:layout_constraintStart_toEndOf="@id/accommodation"
                 app:layout_constraintTop_toBottomOf="@id/ImageLogo" />
 
             <androidx.appcompat.widget.AppCompatButton
@@ -95,8 +97,9 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="20sp"
+                android:onClick="lost_and_found"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/accomodation" />
+                app:layout_constraintTop_toBottomOf="@id/accommodation" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/project"
@@ -109,24 +112,10 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="20sp"
+                android:onClick="project"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/lost_and_found"
                 app:layout_constraintTop_toBottomOf="@id/buy_and_sale" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/other"
-                android:layout_width="180dp"
-                android:layout_height="61dp"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/button_bg"
-                android:text="@string/other"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/services"
-                app:layout_constraintTop_toBottomOf="@id/project" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/services"
@@ -139,8 +128,25 @@
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="20sp"
+                android:onClick="services"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/lost_and_found" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/other"
+                android:layout_width="180dp"
+                android:layout_height="61dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/button_bg"
+                android:text="@string/other"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:onClick="other"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/services"
+                app:layout_constraintTop_toBottomOf="@id/project" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
